--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <title>Blog</title>
+    <title>Teklog</title>
 </head>
 <body>
     <div class="container">
-        <h1 class="mb-4">BlogArticles</h1>
+        <h1 class="mb-4">lotus' Tek(kenb)log</h1>
         <a href="/articles/new" class="btn btn-success">New Article</a>
    
         <% articles.forEach(article => { %>
