--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="mb-4">lotus' Tek(kenb)log</h1>
+        <h1 class="mb-4">Tekken Fieldwork Log</h1>
         <a href="/articles/new" class="btn btn-success">New Article</a>
    
         <% articles.forEach(article => { %>
